# FlowLibs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile
python/: docker_run.py  run_carving.py  run_mask_outputs_by_watershed.py  run_stream_vectorize.py  run_watersheds.py
src/: main_carve.cpp  main_mask_with_watershed.cpp  main_stream_vectorize.cpp  main_watershed.cpp
src/include/: flow_algorithms.hpp  stdefx.h  stream_vectorization.hpp  watershed_delineation.hpp  watershed_masking.hpp
